[hotfix] KIK-1234 fix edit button spacing issue

--- a/app/assets/less/layout/dashboard-custom.less
+++ b/app/assets/less/layout/dashboard-custom.less
@@ -112,8 +112,9 @@
       &:first-child { width: 16%; }
       &:nth-child(2) { width: 16%; }
       &:nth-child(3) { width: 26%; }
-      &:nth-child(4) { width: 20%; }
-      &:nth-child(5) { width: 22%; }
+      &:nth-child(4) { width: 18%; }
+      &:nth-child(5) { width: 18%; }
+      &:nth-child(6) { width: auto; }
     }
   }
 }
